--- a/src/app/core/components/navbar/navbar.component.html
+++ b/src/app/core/components/navbar/navbar.component.html
@@ -16,11 +16,11 @@ class="absolute h-0.5 w-5 bg-black transform transition duration-300 ease-in-out
 </div>
 
 <div class="flex flex-row z-50">
-<a href="#" aria-label="Account">
+<!-- <a href="#" aria-label="Account">
 <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
     <path strokeLinecap="round" strokeLinejoin="round" strokeWidth="2" d="M16 7a4 4 0 11-8 0 4 4 0 018 0zM12 14a7 7 0 00-7 7h14a7 7 0 00-7-7z" />
 </svg>
-</a>
+</a> -->
 
 <a class="relative" routerLink="/cart" routerLinkActive="true" aria-label="Cart" >
     <span class="relative">
