--- a/src/app/public/checkout/address/address.component.html
+++ b/src/app/public/checkout/address/address.component.html
@@ -1,86 +1,84 @@
-<div class="max-w-6xl mx-auto px-5 xl:px-1 mt-20 z-30">
-    <div class="mx-auto max-w-lg text-center">
-        <h2 class="text-2xl font-bold">Addresse de Livraison</h2>
-      </div>
-
-        <form action="" class="mx-auto mb-0 mt-8 max-w-md space-y-4">
-            <label
-                for="Address"
-                class="relative block rounded-md border border-gray-200 shadow-sm focus-within:border-blue-600 focus-within:ring-1 focus-within:ring-blue-600"
-                >
-                <input
-                    type="text"
-                    id="Address"
-                    class=" h-12 peer border-none bg-transparent placeholder-transparent focus:border-transparent focus:outline-none focus:ring-0"
-                    placeholder="Address"
-                />
-
-                <span
-                    class="pointer-events-none absolute start-2.5 top-0 -translate-y-1/2 bg-white p-0.5 text-xs text-gray-700 transition-all peer-placeholder-shown:top-1/2 peer-placeholder-shown:text-sm peer-focus:top-0 peer-focus:text-xs"
-                >
-                    Address
-                </span>
-            </label>
-
-            <label
-            for="City"
-            class="relative block rounded-md border border-gray-200 shadow-sm focus-within:border-blue-600 focus-within:ring-1 focus-within:ring-blue-600"
-            >
-            <input
-                type="text"
-                id="City"
-                class=" h-12 peer border-none bg-transparent placeholder-transparent focus:border-transparent focus:outline-none focus:ring-0"
-                placeholder="City"
-            />
-
-            <span
-                class="pointer-events-none absolute start-2.5 top-0 -translate-y-1/2 bg-white p-0.5 text-xs text-gray-700 transition-all peer-placeholder-shown:top-1/2 peer-placeholder-shown:text-sm peer-focus:top-0 peer-focus:text-xs"
-            >
-                City
-            </span>
-            </label>
-
-            <label
-            for="postalcode"
-            class="relative block rounded-md border border-gray-200 shadow-sm focus-within:border-blue-600 focus-within:ring-1 focus-within:ring-blue-600"
-            >
-            <input
-                type="text"
-                id="postalcode"
-                class=" h-12 peer border-none bg-transparent placeholder-transparent focus:border-transparent focus:outline-none focus:ring-0"
-                placeholder="postalcode"
-            />
-
-            <span
-                class="pointer-events-none absolute start-2.5 top-0 -translate-y-1/2 bg-white p-0.5 text-xs text-gray-700 transition-all peer-placeholder-shown:top-1/2 peer-placeholder-shown:text-sm peer-focus:top-0 peer-focus:text-xs"
-            >
-                Postal Code
-            </span>
-            </label>
-
-
-            <label
-            for="Country"
-            class="relative block rounded-md border border-gray-200 shadow-sm focus-within:border-blue-600 focus-within:ring-1 focus-within:ring-blue-600"
-            >
-            <input
-                type="text"
-                id="Country"
-                class=" h-12 peer border-none bg-transparent placeholder-transparent focus:border-transparent focus:outline-none focus:ring-0"
-                placeholder="Country"
-            />
-
-            <span
-                class="pointer-events-none absolute start-2.5 top-0 -translate-y-1/2 bg-white p-0.5 text-xs text-gray-700 transition-all peer-placeholder-shown:top-1/2 peer-placeholder-shown:text-sm peer-focus:top-0 peer-focus:text-xs"
-            >
-                Country
-            </span>
-            </label>
-
-
-        
-            <app-blue-button [class]="'mt-6'" [label]="'Continuer'"></app-blue-button>
-          </form>
-
+<div class="mx-auto max-w-lg text-center">
+    <h2 class="text-2xl font-bold">Addresse de Livraison</h2>
 </div>
+
+<form action="" class="mx-auto mb-0 mt-8 max-w-md space-y-4">
+<label
+    for="Address"
+    class="relative block rounded-md border border-gray-200 shadow-sm focus-within:border-blue-600 focus-within:ring-1 focus-within:ring-blue-600"
+    >
+    <input
+        type="text"
+        id="Address"
+        class=" h-12 w-full peer border-none bg-transparent placeholder-transparent focus:border-transparent focus:outline-none focus:ring-0"
+        placeholder="Address"
+    />
+
+    <span
+        class="pointer-events-none absolute start-2.5 top-0 -translate-y-1/2 bg-white p-0.5 text-xs text-gray-700 transition-all peer-placeholder-shown:top-1/2 peer-placeholder-shown:text-sm peer-focus:top-0 peer-focus:text-xs"
+    >
+        Address
+    </span>
+</label>
+
+<label
+for="City"
+class="relative block rounded-md border border-gray-200 shadow-sm focus-within:border-blue-600 focus-within:ring-1 focus-within:ring-blue-600"
+>
+<input
+    type="text"
+    id="City"
+    class=" h-12 w-full peer border-none bg-transparent placeholder-transparent focus:border-transparent focus:outline-none focus:ring-0"
+    placeholder="City"
+/>
+
+<span
+    class="pointer-events-none absolute start-2.5 top-0 -translate-y-1/2 bg-white p-0.5 text-xs text-gray-700 transition-all peer-placeholder-shown:top-1/2 peer-placeholder-shown:text-sm peer-focus:top-0 peer-focus:text-xs"
+>
+    City
+</span>
+</label>
+
+<label
+for="postalcode"
+class="relative block rounded-md border border-gray-200 shadow-sm focus-within:border-blue-600 focus-within:ring-1 focus-within:ring-blue-600"
+>
+<input
+    type="text"
+    id="postalcode"
+    class=" h-12 w-full peer border-none bg-transparent placeholder-transparent focus:border-transparent focus:outline-none focus:ring-0"
+    placeholder="postalcode"
+/>
+
+<span
+    class="pointer-events-none absolute start-2.5 top-0 -translate-y-1/2 bg-white p-0.5 text-xs text-gray-700 transition-all peer-placeholder-shown:top-1/2 peer-placeholder-shown:text-sm peer-focus:top-0 peer-focus:text-xs"
+>
+    Postal Code
+</span>
+</label>
+
+
+<label
+for="Country"
+class="relative block rounded-md border border-gray-200 shadow-sm focus-within:border-blue-600 focus-within:ring-1 focus-within:ring-blue-600"
+>
+<input
+    type="text"
+    id="Country"
+    class=" h-12 w-full peer border-none bg-transparent placeholder-transparent focus:border-transparent focus:outline-none focus:ring-0"
+    placeholder="Country"
+/>
+
+<span
+    class="pointer-events-none absolute start-2.5 top-0 -translate-y-1/2 bg-white p-0.5 text-xs text-gray-700 transition-all peer-placeholder-shown:top-1/2 peer-placeholder-shown:text-sm peer-focus:top-0 peer-focus:text-xs"
+>
+    Country
+</span>
+</label>
+
+
+
+<app-blue-button [class]="'mt-6'" [label]="'Continuer'"></app-blue-button>
+</form>
+
 
