--- a/src/app/public/checkout/guest/guest.component.html
+++ b/src/app/public/checkout/guest/guest.component.html
@@ -1,82 +1,118 @@
-<div class="max-w-6xl mx-auto px-5 xl:px-1 mt-20 z-30">
-            <div class="mx-auto max-w-lg text-center">
-                <h2 class="text-2xl font-bold">Vos informations personnelles</h2>
-              </div>
-        
-                <form action="" class="mx-auto mb-0 mt-8 max-w-md space-y-4">
-                    <label
-                        for="FirstName"
-                        class="relative block rounded-md border border-gray-200 shadow-sm focus-within:border-blue-600 focus-within:ring-1 focus-within:ring-blue-600"
-                        >
-                        <input
-                            type="text"
-                            id="FirstName"
-                            class=" h-12 w-full peer border-none bg-transparent placeholder-transparent focus:border-transparent focus:outline-none focus:ring-0"
-                            placeholder="FirstName"
-                        />
-        
-                        <span
-                            class="pointer-events-none absolute start-2.5 top-0 -translate-y-1/2 bg-white p-0.5 text-xs text-gray-700 transition-all peer-placeholder-shown:top-1/2 peer-placeholder-shown:text-sm peer-focus:top-0 peer-focus:text-xs"
-                        >
-                            First Name
-                        </span>
-                    </label>
-        
-                    <label
-                    for="LastName"
-                    class="relative block rounded-md border border-gray-200 shadow-sm focus-within:border-blue-600 focus-within:ring-1 focus-within:ring-blue-600"
-                    >
-                    <input
-                        type="text"
-                        id="LastName"
-                        class=" h-12 w-full peer border-none bg-transparent placeholder-transparent focus:border-transparent focus:outline-none focus:ring-0"
-                        placeholder="LastName"
-                    />
-        
-                    <span
-                        class="pointer-events-none absolute start-2.5 top-0 -translate-y-1/2 bg-white p-0.5 text-xs text-gray-700 transition-all peer-placeholder-shown:top-1/2 peer-placeholder-shown:text-sm peer-focus:top-0 peer-focus:text-xs"
-                    >
-                        Last Name
-                    </span>
-                    </label>
-        
-                    <label
-                    for="Email"
-                    class="relative block rounded-md border border-gray-200 shadow-sm focus-within:border-blue-600 focus-within:ring-1 focus-within:ring-blue-600"
-                    >
-                    <input
-                        type="email"
-                        id="Email"
-                        class=" h-12 w-full peer border-none bg-transparent placeholder-transparent focus:border-transparent focus:outline-none focus:ring-0"
-                        placeholder="Email"
-                    />
-        
-                    <span
-                        class="pointer-events-none absolute start-2.5 top-0 -translate-y-1/2 bg-white p-0.5 text-xs text-gray-700 transition-all peer-placeholder-shown:top-1/2 peer-placeholder-shown:text-sm peer-focus:top-0 peer-focus:text-xs"
-                    >
-                        Email
-                    </span>
-                    </label>
-        
-                    <label
-                    for="NumberPhone"
-                    class="relative block rounded-md border border-gray-200 shadow-sm focus-within:border-blue-600 focus-within:ring-1 focus-within:ring-blue-600"
-                    >
-                    <input
-                        type="tel"
-                        id="NumberPhone"
-                        class=" h-12 w-full peer border-none bg-transparent placeholder-transparent focus:border-transparent focus:outline-none focus:ring-0"
-                        placeholder="NumberPhone"
-                    />
-        
-                    <span
-                        class="pointer-events-none absolute start-2.5 top-0 -translate-y-1/2 bg-white p-0.5 text-xs text-gray-700 transition-all peer-placeholder-shown:top-1/2 peer-placeholder-shown:text-sm peer-focus:top-0 peer-focus:text-xs"
-                    >
-                        Number Phone
-                    </span>
-                    </label>
-                
-                    <app-blue-button [class]="'mt-6'" [label]="'Continuer'" (click)="clickPrescriptionOrAddress()"></app-blue-button>
-                  </form>
+<div class="mx-auto max-w-lg text-center">
+    <h2 class="text-2xl font-bold">Vos informations personnelles</h2>
+</div>
 
- </div>
+<form [formGroup]="form" class="mx-auto mb-0 mt-8 max-w-md space-y-4">
+    
+<label
+    for="FirstName"
+    class="relative block rounded-md border border-gray-200 shadow-sm focus-within:border-blue-600 focus-within:ring-1 focus-within:ring-blue-600"
+    >
+    <input
+        type="text"
+        id="FirstName"
+        class="h-12 px-2 w-full peer border-none bg-transparent placeholder-transparent focus:border-transparent focus:outline-none focus:ring-0"
+        placeholder="FirstName"
+        name="firstName"
+        formControlName="firstName"
+    />
+
+    <span
+        class="pointer-events-none absolute start-2.5 top-0 -translate-y-1/2 bg-white p-0.5 text-xs text-gray-700 transition-all peer-placeholder-shown:top-1/2 peer-placeholder-shown:text-sm peer-focus:top-0 peer-focus:text-xs"
+    >
+        First Name
+    </span>
+</label>
+
+<div *ngIf="submitted && firstNameControl?.hasError('required')" class="py-2 text-red-500">
+    Ce champs est requis pour traiter votre commande.
+    </div>
+
+<label
+for="LastName"
+class="relative block rounded-md border border-gray-200 shadow-sm focus-within:border-blue-600 focus-within:ring-1 focus-within:ring-blue-600"
+>
+<input
+    type="text"
+    id="LastName"
+    class=" h-12 px-2 w-full peer border-none bg-transparent placeholder-transparent focus:border-transparent focus:outline-none focus:ring-0"
+    placeholder="LastName"
+    name="lastName"
+    formControlName="lastName"
+/>
+
+
+<span
+    class="pointer-events-none absolute start-2.5 top-0 -translate-y-1/2 bg-white p-0.5 text-xs text-gray-700 transition-all peer-placeholder-shown:top-1/2 peer-placeholder-shown:text-sm peer-focus:top-0 peer-focus:text-xs"
+>
+    Last Name
+</span>
+</label>
+
+<div *ngIf="submitted && lastNameControl?.hasError('required')" class="py-2 text-red-500">
+    Ce champs est requis pour traiter votre commande.
+    </div>
+
+<label
+for="Email"
+class="relative block rounded-md border border-gray-200 shadow-sm focus-within:border-blue-600 focus-within:ring-1 focus-within:ring-blue-600"
+>
+<input
+    type="email"
+    id="Email"
+    class=" h-12 px-2 w-full peer border-none bg-transparent placeholder-transparent focus:border-transparent focus:outline-none focus:ring-0"
+    placeholder="Email"
+    name="email"
+    formControlName="email"
+/>
+
+<span
+    class="pointer-events-none absolute start-2.5 top-0 -translate-y-1/2 bg-white p-0.5 text-xs text-gray-700 transition-all peer-placeholder-shown:top-1/2 peer-placeholder-shown:text-sm peer-focus:top-0 peer-focus:text-xs"
+>
+    Email
+</span>
+</label>
+
+<div *ngIf="submitted && (emailControl?.hasError('email') || emailControl?.hasError('required'))" class="py-2 text-red-500">
+    <ng-container *ngIf="emailControl?.hasError('email')">
+        Please enter a valid email address.
+    </ng-container>
+    <ng-container *ngIf="emailControl?.hasError('required')">
+        Email is required.
+    </ng-container>
+    </div>
+
+<label
+for="NumberPhone"
+class="relative block rounded-md border border-gray-200 shadow-sm focus-within:border-blue-600 focus-within:ring-1 focus-within:ring-blue-600"
+>
+<input
+    type="tel"
+    id="NumberPhone"
+    class=" h-12 px-2 w-full peer border-none bg-transparent placeholder-transparent focus:border-transparent focus:outline-none focus:ring-0"
+    placeholder="NumberPhone"
+    name="numberPhone"
+    formControlName="numberPhone"
+/>
+
+<span
+    class="pointer-events-none absolute start-2.5 top-0 -translate-y-1/2 bg-white p-0.5 text-xs text-gray-700 transition-all peer-placeholder-shown:top-1/2 peer-placeholder-shown:text-sm peer-focus:top-0 peer-focus:text-xs"
+>
+    Number Phone
+</span>
+</label>
+
+
+<div *ngIf="submitted && (numberPhoneControl?.hasError('pattern') || numberPhoneControl?.hasError('required'))" class="py-2 text-red-500">
+    <ng-container *ngIf="numberPhoneControl?.hasError('pattern')">
+        Please enter a valid phone number (digits only).
+    </ng-container>
+    <ng-container *ngIf="numberPhoneControl?.hasError('required')">
+        Number Phone is required.
+    </ng-container>
+    </div>
+
+
+<app-blue-button [class]="'mt-6'" [label]="'Continuer'" (click)="onSubmit()"></app-blue-button>
+</form>
+
