avance sur le composant prescription

--- a/src/app/public/checkout/checkout-cart-summary/checkout-cart-summary.component.html
+++ b/src/app/public/checkout/checkout-cart-summary/checkout-cart-summary.component.html
@@ -1,4 +1,4 @@
-<div class="p-6 space-y-6">
+<div class="p-6 space-y-6 bg-gray-50 rounded-lg ">
     <div class="flex flex-row justify-between">
         <h3 class="mb-2 text-2xl font-bold text-black" >Ma Commande</h3>
         <a class="text-sm" routerLink="/cart" routerLinkActive="true" >Modifier</a>
