--- a/src/app/public/checkout/guest/guest.component.html
+++ b/src/app/public/checkout/guest/guest.component.html
@@ -1,5 +1,5 @@
 <div class="mx-auto max-w-lg text-center">
-    <h2 class="text-2xl font-bold">Vos informations personnelles</h2>
+    <h2 class="text-2xl font-bold text-black">Détails Personnels</h2>
 </div>
 
 <form [formGroup]="form" class="mx-auto mb-0 mt-8 max-w-md space-y-4">
