--- a/src/app/core/components/blue-button/blue-button.component.html
+++ b/src/app/core/components/blue-button/blue-button.component.html
@@ -1,3 +1,5 @@
-<button class="capitalize font-semibold w-full px-8 py-3 bg-blue-600 text-white rounded-md hover:bg-blue-700 transition duration-150 {{ class }}">
+<button class="capitalize font-semibold w-full px-8 py-3 rounded-md hover:bg-blue-700 transition duration-150 {{ class }} 
+              {{ disabled ? 'bg-gray-400 cursor-not-allowed text-white hover:bg-gray-700' : 'bg-blue-600 hover:bg-blue-700 text-white' }}"
+        [disabled]="disabled">
     {{ label }}
 </button>
