--- a/src/app/public/checkout/checkout-layout/checkout-layout.component.html
+++ b/src/app/public/checkout/checkout-layout/checkout-layout.component.html
@@ -1,10 +1,32 @@
-<div class="max-w-6xl mx-auto px-5 xl:px-1 mt-20 z-30">
-    <div class="grid grid-cols-1 gap-4 lg:grid-cols-3 lg:gap-8">
-        <div class="rounded-lg lg:col-span-2">
+<div class="max-w-6xl mx-auto px-5 xl:px-1 mt-10 z-30">
+    <app-checkout-progress-bar></app-checkout-progress-bar>
+    <div class="grid grid-cols-1 gap-4 lg:grid-cols-3 lg:gap-8 mt-6 sm:mt-10">
+        <div class="rounded-lg lg:col-span-2 lg:border h-fit pt-4 pb-10">
         <router-outlet></router-outlet>
         </div>
-        <div class="rounded-lg bg-gray-50 mt-6 max-w-md mx-auto w-full lg:mt-0">
+        <div class="mt-6 max-w-md mx-auto w-full lg:mt-0">
             <app-checkout-cart-summary></app-checkout-cart-summary>
+            <div class="mt-6 border p-4 rounded-lg">
+                <p class="text-gray-500 font-light">Nous acceptons </p>
+                <div class="flex flex-row h-12 justify-between">
+                    <img *ngFor="let imageUrl of imageUrls" [src]="imageUrl" alt="Payment Method">
+                </div>
+                <div class="flex flex-row h-6 mt-2 justify-center">
+                    <img src="assets/img/payment/lock-ssl.png" alt="payment securised">
+                    <p class="text-gray-500 font-light ml-2 text-sm">
+                        Paiement sécurisé (cryptage SSL)
+                    </p>
+                </div>
+            </div>
         </div>
       </div>
+</div>
+<div class="absolute top-0 bg-gray-700 w-full h-full opacity-50 z-50" *ngIf="loading$ | async">
+    <div role="status" class="absolute -translate-x-1/2 -translate-y-1/2 top-2/4 left-1/2">
+        <svg aria-hidden="true" class="inline w-14 h-14 mr-2 text-gray-200 animate-spin dark:text-gray-600 fill-blue-600" viewBox="0 0 100 101" fill="none" xmlns="http://www.w3.org/2000/svg">
+            <path d="M100 50.5908C100 78.2051 77.6142 100.591 50 100.591C22.3858 100.591 0 78.2051 0 50.5908C0 22.9766 22.3858 0.59082 50 0.59082C77.6142 0.59082 100 22.9766 100 50.5908ZM9.08144 50.5908C9.08144 73.1895 27.4013 91.5094 50 91.5094C72.5987 91.5094 90.9186 73.1895 90.9186 50.5908C90.9186 27.9921 72.5987 9.67226 50 9.67226C27.4013 9.67226 9.08144 27.9921 9.08144 50.5908Z" fill="currentColor"/>
+            <path d="M93.9676 39.0409C96.393 38.4038 97.8624 35.9116 97.0079 33.5539C95.2932 28.8227 92.871 24.3692 89.8167 20.348C85.8452 15.1192 80.8826 10.7238 75.2124 7.41289C69.5422 4.10194 63.2754 1.94025 56.7698 1.05124C51.7666 0.367541 46.6976 0.446843 41.7345 1.27873C39.2613 1.69328 37.813 4.19778 38.4501 6.62326C39.0873 9.04874 41.5694 10.4717 44.0505 10.1071C47.8511 9.54855 51.7191 9.52689 55.5402 10.0491C60.8642 10.7766 65.9928 12.5457 70.6331 15.2552C75.2735 17.9648 79.3347 21.5619 82.5849 25.841C84.9175 28.9121 86.7997 32.2913 88.1811 35.8758C89.083 38.2158 91.5421 39.6781 93.9676 39.0409Z" fill="currentFill"/>
+        </svg>
+        <span class="sr-only">Loading...</span>
+    </div>
 </div>
