la sequence Guest => Prescription => Address Marche

--- a/src/app/public/checkout/address/address.component.html
+++ b/src/app/public/checkout/address/address.component.html
@@ -1,7 +1,7 @@
 <div class="mx-auto max-w-lg text-center">
     <h2 class="text-2xl font-bold">Addresse de Livraison</h2>
 </div>
-<form action="" class="mx-auto mb-0 mt-8 max-w-md space-y-4">
+<form [formGroup]="form" class="mx-auto mb-0 mt-8 max-w-md space-y-4">
 <label
     for="Address"
     class="relative block rounded-md border border-gray-200 shadow-sm focus-within:border-blue-600 focus-within:ring-1 focus-within:ring-blue-600"
@@ -11,6 +11,7 @@
         id="Address"
         class=" h-12 w-full peer border-none bg-transparent placeholder-transparent focus:border-transparent focus:outline-none focus:ring-0"
         placeholder="Address"
+        formControlName="address"
     />
 
     <span
@@ -19,6 +20,10 @@
         Address
     </span>
 </label>
+
+<div *ngIf="submitted && addressControl?.hasError('required')" class="py-2 text-red-500">
+    Ce champ est requis pour traiter votre commande.
+</div>
 
 <label
 for="City"
@@ -29,6 +34,7 @@ class="relative block rounded-md border border-gray-200 shadow-sm focus-within:b
     id="City"
     class=" h-12 w-full peer border-none bg-transparent placeholder-transparent focus:border-transparent focus:outline-none focus:ring-0"
     placeholder="City"
+    formControlName="city"
 />
 
 <span
@@ -37,6 +43,10 @@ class="relative block rounded-md border border-gray-200 shadow-sm focus-within:b
     City
 </span>
 </label>
+
+<div *ngIf="submitted && cityControl?.hasError('required')" class="py-2 text-red-500">
+    Ce champ est requis pour traiter votre commande.
+</div>
 
 <label
 for="postalcode"
@@ -47,6 +57,7 @@ class="relative block rounded-md border border-gray-200 shadow-sm focus-within:b
     id="postalcode"
     class=" h-12 w-full peer border-none bg-transparent placeholder-transparent focus:border-transparent focus:outline-none focus:ring-0"
     placeholder="postalcode"
+    formControlName="postalCode"
 />
 
 <span
@@ -55,6 +66,10 @@ class="relative block rounded-md border border-gray-200 shadow-sm focus-within:b
     Postal Code
 </span>
 </label>
+
+<div *ngIf="submitted && postalCodeControl?.hasError('required')" class="py-2 text-red-500">
+    Ce champ est requis pour traiter votre commande.
+</div>
 
 
 <label
@@ -66,6 +81,7 @@ class="relative block rounded-md border border-gray-200 shadow-sm focus-within:b
     id="Country"
     class=" h-12 w-full peer border-none bg-transparent placeholder-transparent focus:border-transparent focus:outline-none focus:ring-0"
     placeholder="Country"
+    formControlName="country"
 />
 
 <span
@@ -75,9 +91,13 @@ class="relative block rounded-md border border-gray-200 shadow-sm focus-within:b
 </span>
 </label>
 
+<div *ngIf="submitted && countryControl?.hasError('required')" class="py-2 text-red-500">
+    Ce champ est requis pour traiter votre commande.
+</div>
 
 
-<app-blue-button [class]="'mt-6'" [label]="'Continuer'"></app-blue-button>
+
+<app-blue-button [class]="'mt-6'" [label]="'Continuer'" (click)="onSubmit()"></app-blue-button>
 </form>
 
 
