--- a/src/app/public/checkout/payment/payment.component.html
+++ b/src/app/public/checkout/payment/payment.component.html
@@ -1,1 +1,15 @@
-<p>payment works!</p>
+<div class="mx-auto max-w-lg text-center">
+  <h2 class="text-2xl font-bold text-black">Procéder au Paiement</h2>
+  <div  class="my-6" id="express-element">
+    <!-- Express Checkout Element will be inserted here -->
+  </div>
+  <div class="divider">OR</div>
+  <div class="mt-6 p-4"  id="card-element">
+    <!-- Express Checkout Element will be inserted here -->
+  </div>
+    <app-blue-button [class]="'mt-6'" [label]="'Payer'" (click)="pay()"></app-blue-button>
+</div>
+
+
+
+    
