traitement des erreurs dans la sequence de commande

--- a/src/app/core/components/navbar/navbar.component.html
+++ b/src/app/core/components/navbar/navbar.component.html
@@ -11,7 +11,7 @@ class="absolute h-0.5 w-5 bg-black transform transition duration-300 ease-in-out
 </div>
 </button>
 
-<div class="h-4 w-40 md:h-6 md:w-52 z-50" >
+<div class="h-4 w-40 md:h-6 md:w-52 z-50 cursor-pointer" (click)="onClickLogo()" >
 <img src="/assets/img/website-logo.png" alt="The Light Projekt" height="64" width="507"/>
 </div>
 
@@ -21,8 +21,7 @@ class="absolute h-0.5 w-5 bg-black transform transition duration-300 ease-in-out
     <path strokeLinecap="round" strokeLinejoin="round" strokeWidth="2" d="M16 7a4 4 0 11-8 0 4 4 0 018 0zM12 14a7 7 0 00-7 7h14a7 7 0 00-7-7z" />
 </svg>
 </a> -->
-
-<a class="relative" routerLink="/cart" routerLinkActive="true" aria-label="Cart" >
+  <button class="relative" aria-label="Cart" (click)="onClickCart()">
     <span class="relative">
       <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
         <path strokeLinecap="round" strokeLinejoin="round" strokeWidth="2" d="M16 11V7a4 4 0 00-8 0v4M5 9h14l1 12H4L5 9z" />
@@ -35,6 +34,7 @@ class="absolute h-0.5 w-5 bg-black transform transition duration-300 ease-in-out
             <span class="absolute right-0 inline-flex rounded-full w-2 h-2 bg-blue-500"></span>
         </span>
     </span>
-</a>
+  </button>
+
 </div>
 </nav>
