--- a/src/app/public/cart/cart-subtotal/cart-subtotal.component.html
+++ b/src/app/public/cart/cart-subtotal/cart-subtotal.component.html
@@ -15,6 +15,6 @@
       </div>
     </div>
 
-    <app-blue-button [label]="'next'" (click)="onClick()" class="mt-4"></app-blue-button>
+    <app-blue-button [label]="'Continuer'" (click)="onClick()" class="mt-4"></app-blue-button>
 
 </div>
