--- a/src/app/public/cart/cart/cart.component.html
+++ b/src/app/public/cart/cart/cart.component.html
@@ -1,4 +1,4 @@
-<div class="max-w-6xl mx-auto px-5 xl:px-1" *ngIf="pageInfo">
+<div class="max-w-6xl mx-auto px-5 xl:px-1 min-h-screen" *ngIf="pageInfo">
     <div class="text-sm mt-4 w-full p-3 bg-gray-50 text-center border">
         {{ pageInfo.header }}
     </div>
