--- a/src/app/public/checkout/checkout-layout/checkout-layout.component.html
+++ b/src/app/public/checkout/checkout-layout/checkout-layout.component.html
@@ -1,4 +1,4 @@
-<div class="max-w-6xl mx-auto px-5 xl:px-1 mt-10 z-30">
+<div class="max-w-6xl mx-auto px-5 xl:px-1 mt-10 z-30 min-h-screen">
     <app-checkout-progress-bar></app-checkout-progress-bar>
     <div class="grid grid-cols-1 gap-4 lg:grid-cols-3 lg:gap-8 mt-6 sm:mt-10">
         <div class="rounded-lg lg:col-span-2 lg:border h-fit pt-4 pb-10">
