--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,5 @@
 <div class="flex flex-col">
     <app-header></app-header>
     <router-outlet class="pt-12"></router-outlet>
+    <app-footer></app-footer>
 </div>
