--- a/src/app/public/collection/collection/collection.component.html
+++ b/src/app/public/collection/collection/collection.component.html
@@ -1,4 +1,4 @@
-<div class="max-w-6xl mx-auto px-5 xl:px-1">
+<div class="max-w-6xl mx-auto px-5 xl:px-1 min-h-screen">
     <section>
         <div class="max-w-screen-xl px-4 py-8 mx-auto sm:px-6 sm:py-12 lg:px-8">
           <div class="text-center" *ngIf="collection">
