--- a/src/app/core/components/footer/footer.component.html
+++ b/src/app/core/components/footer/footer.component.html
@@ -1,37 +1,37 @@
-<footer class=" bg-zinc-100 mt-12">
-    <div class="mx-auto max-w-5xl px-4 py-6 sm:px-6 lg:px-8">
+<footer class="border-t border-black mt-12">
+    <div class="mx-auto max-w-5xl py-4 sm:px-6 lg:px-8">
       <div class="flex justify-center text-teal-600">
         <div class="cursor-pointer" >
             <img src="/assets/img/logo.png" alt="The Light Projekt" height="80" width="80"/>
             </div>
       </div>
-  
+<!--   
       <p class="mx-auto mt-6 max-w-md text-center leading-relaxed text-gray-500">
         Lorem ipsum dolor, sit amet consectetur adipisicing elit. Incidunt
         consequuntur amet culpa cum itaque neque.
-      </p>
+      </p> -->
   
-      <ul class="mt-12 flex flex-wrap justify-center gap-6 md:gap-8 lg:gap-12">
+      <ul class="mt-4 flex flex-wrap justify-center gap-6 md:gap-8 lg:gap-12">
         <li>
-          <a class="text-gray-700 transition hover:text-gray-700/75" href="/">
+          <a class="text-gray-700 transition hover:text-gray-700/75" routerLink="page/about" routerLinkActive="true">
             About
           </a>
         </li>
   
         <li>
-          <a class="text-gray-700 transition hover:text-gray-700/75" href="/">
+          <a class="text-gray-700 transition hover:text-gray-700/75" routerLink="contact" routerLinkActive="true">
             Contact
           </a>
         </li>
   
         <li>
-          <a class="text-gray-700 transition hover:text-gray-700/75" href="/">
+          <a class="text-gray-700 transition hover:text-gray-700/75" routerLink="order-tracking" routerLinkActive="true">
             Suivre ma commande
           </a>
         </li>
 
         <li>
-            <a class="text-gray-700 transition hover:text-gray-700/75" href="/">
+            <a class="text-gray-700 transition hover:text-gray-700/75" routerLink="faq" routerLinkActive="true">
              FAQ
             </a>
         </li>
@@ -39,7 +39,7 @@
 
       </ul>
   
-      <ul class="mt-12 flex justify-center gap-6 md:gap-8">
+      <ul class="mt-6 flex justify-center gap-6 md:gap-8">
         <li>
           <a
             href="/"
@@ -88,6 +88,10 @@
   
     
       </ul>
+
+      <p class="mx-auto mt-6 max-w-md text-center leading-relaxed text-sm">
+        © 2023 The Light Projekt
+      </p>
     </div>
   </footer>
   
