--- a/src/app/public/product/product/product.component.html
+++ b/src/app/public/product/product/product.component.html
@@ -21,7 +21,7 @@
                             <span *ngIf="collection?.id === 1" class="text-blue-500 text-sm capitalize text-center">{{ pageInfo?.blue_light_filter }}</span>
 
                             <div class="mt-2 mb-6 text-center">
-                              <h2 class="mb-2 text-lg font-bold uppercase tracking-tight text-black">{{ product?.title }}</h2>
+                              <h1 class="mb-2 text-lg font-bold uppercase tracking-tight text-black">{{ product?.title }}</h1>
                           
     
                               <p class="text-xl font-bold border-t pt-2 border-zinc-300 text-black">
@@ -42,7 +42,11 @@
                              </div>
                               
                              <ng-container *ngIf="product">
-                              <app-product-detail [pageInfo]="pageInfo" [rx]="product.rx"></app-product-detail>
+                              <app-product-detail [pageInfo]="pageInfo" [rx]="product.rx"
+                                [size_bridge]="product.size_bridge"
+                                [size_eye]="product.size_eye"
+                                [size_temple]="product.size_temple"
+                                [material]="product.material"></app-product-detail>
                              </ng-container>
 
                         </div>
