--- a/src/app/public/contact/contact-page/contact-page.component.html
+++ b/src/app/public/contact/contact-page/contact-page.component.html
@@ -11,15 +11,15 @@
     </p>
     <h2 class="text-xl font-bold text-gray-900 sm:text-2xl" >Réseaux Sociaux</h2>
     <p class="pt-6">
-        Vous pouvez egalement nous contacter directement depuis les differents reseaux sociaux :
+        Vous pouvez egalement nous contacter directement depuis les reseaux sociaux :
     </p>    
     <ul class="pt-2">
         <li>
             <a class="text-blue-700" href="https://www.instagram.com/thelightprojekt">Instagram</a>
         </li>
-        <li>
+        <!-- <li>
             <a>Facebook</a>
-        </li>
+        </li> -->
     </ul>
 
 </div>
