--- a/src/app/public/home/homepage/homepage.component.html
+++ b/src/app/public/home/homepage/homepage.component.html
@@ -63,7 +63,7 @@
           </p>
   
           <div class="flex justify-center gap-8 mt-8 flex-wrap">   
-            <a
+            <a routerLink="page/nos-verres" routerLinkActive="true"
             class="group relative inline-block text-sm font-medium text-black focus:outline-none focus:ring active:text-black"
             >
             <span
