--- a/src/app/public/product/add-to-cart/add-to-cart.component.html
+++ b/src/app/public/product/add-to-cart/add-to-cart.component.html
@@ -1,4 +1,4 @@
 <div class="w-full px-4 my-12 cursor-pointer">
-    <a (click)="onClick()" class="flex items-center justify-center text-center uppercase w-full p-4 text-sm text-white bg-black border border-black hover:bg-white hover:text-black transition duration-150">
-        {{ title }}</a>
+    <button (click)="onClick()" class="flex items-center justify-center text-center uppercase w-full p-4 text-sm text-white bg-black border border-black hover:bg-white hover:text-black transition duration-150">
+        {{ title }}</button>
 </div>
