--- a/src/app/public/lens/lense/lense.component.html
+++ b/src/app/public/lens/lense/lense.component.html
@@ -22,7 +22,7 @@
       <img *ngIf="frame"
       src="https://directus.thelightprojekt.com/assets/{{ frame.product.thumbnail }}"
       alt="{{ frame.product.alt_thumbnail }}"
-      class="object-cover h-2/6 py-4"
+      class="object-cover h-2/6 w-full py-4"
       />
     </div>
 
