coquille et cors

--- a/src/app/public/checkout/address/address.component.html
+++ b/src/app/public/checkout/address/address.component.html
@@ -1,5 +1,5 @@
 <div class="mx-auto max-w-lg text-center">
-    <h2 class="text-2xl font-bold">Addresse de Livraison</h2>
+    <h2 class="text-2xl font-bold">Adresse de Livraison</h2>
 </div>
 <form [formGroup]="form" class="mx-auto mb-0 mt-8 max-w-md space-y-4">
 <label
@@ -17,7 +17,7 @@
     <span
         class="pointer-events-none absolute start-2.5 top-0 -translate-y-1/2 bg-white p-0.5 text-xs text-gray-700 transition-all peer-placeholder-shown:top-1/2 peer-placeholder-shown:text-sm peer-focus:top-0 peer-focus:text-xs"
     >
-        Address
+        Adresse
     </span>
 </label>
 
@@ -40,7 +40,7 @@ class="relative block rounded-md border border-gray-200 shadow-sm focus-within:b
 <span
     class="pointer-events-none absolute start-2.5 top-0 -translate-y-1/2 bg-white p-0.5 text-xs text-gray-700 transition-all peer-placeholder-shown:top-1/2 peer-placeholder-shown:text-sm peer-focus:top-0 peer-focus:text-xs"
 >
-    City
+    Ville
 </span>
 </label>
 
@@ -63,7 +63,7 @@ class="relative block rounded-md border border-gray-200 shadow-sm focus-within:b
 <span
     class="pointer-events-none absolute start-2.5 top-0 -translate-y-1/2 bg-white p-0.5 text-xs text-gray-700 transition-all peer-placeholder-shown:top-1/2 peer-placeholder-shown:text-sm peer-focus:top-0 peer-focus:text-xs"
 >
-    Postal Code
+    Code Postal
 </span>
 </label>
 
@@ -87,7 +87,7 @@ class="relative block rounded-md border border-gray-200 shadow-sm focus-within:b
 <span
     class="pointer-events-none absolute start-2.5 top-0 -translate-y-1/2 bg-white p-0.5 text-xs text-gray-700 transition-all peer-placeholder-shown:top-1/2 peer-placeholder-shown:text-sm peer-focus:top-0 peer-focus:text-xs"
 >
-    Country
+    Pays
 </span>
 </label>
 
