--- a/src/app/public/checkout/guest/guest.component.html
+++ b/src/app/public/checkout/guest/guest.component.html
@@ -20,7 +20,7 @@
     <span
         class="pointer-events-none absolute start-2.5 top-0 -translate-y-1/2 bg-white p-0.5 text-xs text-gray-700 transition-all peer-placeholder-shown:top-1/2 peer-placeholder-shown:text-sm peer-focus:top-0 peer-focus:text-xs"
     >
-        First Name
+        Prénom
     </span>
 </label>
 
@@ -45,7 +45,7 @@ class="relative block rounded-md border border-gray-200 shadow-sm focus-within:b
 <span
     class="pointer-events-none absolute start-2.5 top-0 -translate-y-1/2 bg-white p-0.5 text-xs text-gray-700 transition-all peer-placeholder-shown:top-1/2 peer-placeholder-shown:text-sm peer-focus:top-0 peer-focus:text-xs"
 >
-    Last Name
+    Nom
 </span>
 </label>
 
@@ -98,7 +98,7 @@ class="relative block rounded-md border border-gray-200 shadow-sm focus-within:b
 <span
     class="pointer-events-none absolute start-2.5 top-0 -translate-y-1/2 bg-white p-0.5 text-xs text-gray-700 transition-all peer-placeholder-shown:top-1/2 peer-placeholder-shown:text-sm peer-focus:top-0 peer-focus:text-xs"
 >
-    Number Phone
+    Numéro de Téléphone
 </span>
 </label>
 
