size img homepage

--- a/src/app/public/home/homepage/homepage.component.html
+++ b/src/app/public/home/homepage/homepage.component.html
@@ -8,7 +8,7 @@
         >
           <img
             alt="Lunettes de vue en titane"
-            src="/assets/img/home/1.16.png"
+            src="/assets/img/home/lunettes-the-light-projekt.jpg"
             class="absolute inset-0 h-full w-full object-contain"
           />
         </div>
