--- a/src/app/public/checkout/prescription/prescription.component.html
+++ b/src/app/public/checkout/prescription/prescription.component.html
@@ -18,7 +18,7 @@
                         [checked]="(itemFileSelections$ | async)?.[item.directusId]"
                         (click)="fileInput.click()" />
 
-                        <input style="display: none" type="file" (change)="handleOptionChange($event ,'file', item.directusId)" #fileInput />
+                        <input style="display: none" type="file" (change)="handleOptionChange($event ,'file', item.directusId)" accept="capture=camera, image/*" #fileInput />
                     </label>
 
                     <label
