change mail address

--- a/src/app/public/contact/contact-page/contact-page.component.html
+++ b/src/app/public/contact/contact-page/contact-page.component.html
@@ -7,7 +7,7 @@
     </p>
     <h2 class="text-xl font-bold text-gray-900 sm:text-2xl">E-mail</h2>
     <p class="py-6">
-        Vous pouvez nous envoyer un e-mail à <a class="text-blue-700" href="mailto:brand@thelightprojekt.com">brand@thelightprojekt.com</a>, et nous vous répondrons dans les plus brefs délais (Moins de 24h). 
+        Vous pouvez nous envoyer un e-mail à <a class="text-blue-700" href="mailto:ryan@thelightprojekt.com">ryan@thelightprojekt.com</a>, et nous vous répondrons dans les plus brefs délais (Moins de 24h). 
     </p>
     <h2 class="text-xl font-bold text-gray-900 sm:text-2xl" >Réseaux Sociaux</h2>
     <p class="pt-6">
